Add scandir as requirement

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas
+        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas scandir
         - pip install --pre .
       script:
         - coverage run --omit pyfileindex/_version.py -m unittest discover tests
@@ -62,7 +62,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas
+        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas scandir
         - pip install --pre .
       script:
         - coverage run --omit pyfileindex/_version.py -m unittest discover tests
