--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 [versioneer]
 VCS = git
 style = pep440-pre
-versionfile_source = fileindex/_version.py
+versionfile_source = pyfileindex/_version.py
 #versionfile_build =
-tag_prefix = fileindex-
-parentdir_prefix = fileindex
+tag_prefix = pyfileindex-
+parentdir_prefix = pyfileindex
