--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas scandir
+        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas=0.24.2 scandir=1.10.0
         - pip install --pre .
       script:
         - coverage run -m unittest discover tests
@@ -28,7 +28,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coveralls coverage pandas
+        - conda install -y -c conda-forge python=${PYTHONVER} coveralls coverage pandas=0.24.2 scandir=1.10.0
         - pip install --pre .
       script:
         - coverage run -m unittest discover tests
@@ -63,7 +63,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas scandir
+        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas=0.24.2 scandir=1.10.0
         - pip install --pre .
       script:
         - coverage run -m unittest discover tests
@@ -79,7 +79,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas
+        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas=0.24.2 scandir=1.10.0
         - pip install --pre .
       script:
         - coverage run -m unittest discover tests
