--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,7 @@
 matrix:
   include:
-    - stage: test
-      name: test_linux_2_7
-      os: linux
-      language: python
-      env: MINICONDA="https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh" PYTHONVER="2.7"
-      install:
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - wget ${MINICONDA} -O miniconda.sh
-        - bash miniconda.sh -b -p $HOME/miniconda
-        - conda info -a
-        - conda config --set always_yes yes --set changeps1 no
-        - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas=0.24.2 scandir=1.10.0
-        - pip install --pre .
-      script:
-        - coverage run -m unittest discover tests
-
     - name: test_linux_3_7
+      if: branch = master
       os: linux
       language: python
       env: MINICONDA="https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" PYTHONVER="3.7"
@@ -51,35 +35,3 @@ matrix:
           allow_failure: true
           on:
             tags: true
-
-    - name: test_osx_2_7
-      os: osx
-      language: generic
-      env: MINICONDA="https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh" PYTHONVER="2.7"
-      install:
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - wget ${MINICONDA} -O miniconda.sh
-        - bash miniconda.sh -b -p $HOME/miniconda
-        - conda info -a
-        - conda config --set always_yes yes --set changeps1 no
-        - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas=0.24.2 scandir=1.10.0
-        - pip install --pre .
-      script:
-        - coverage run -m unittest discover tests
-
-    - name: test_osx_3_7
-      os: osx
-      language: generic
-      env: MINICONDA="https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" PYTHONVER="3.7"
-      install:
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - wget ${MINICONDA} -O miniconda.sh
-        - bash miniconda.sh -b -p $HOME/miniconda
-        - conda info -a
-        - conda config --set always_yes yes --set changeps1 no
-        - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coverage pandas=0.24.2 scandir=1.10.0
-        - pip install --pre .
-      script:
-        - coverage run -m unittest discover tests
