--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 matrix:
   include:
-    - name: test_linux_3_7
+    - name: test_linux_3_9
       if: branch = master
       os: linux
       language: python
-      env: MINICONDA="https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" PYTHONVER="3.7"
+      env: MINICONDA="https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" PYTHONVER="3.9"
       install:
         - export PATH="$HOME/miniconda/bin:$PATH"
         - wget ${MINICONDA} -O miniconda.sh
@@ -12,7 +12,7 @@ matrix:
         - conda info -a
         - conda config --set always_yes yes --set changeps1 no
         - conda update -q conda
-        - conda install -y -c conda-forge python=${PYTHONVER} coveralls coverage pandas=0.24.2 scandir=1.10.0
+        - conda install -y -c conda-forge python=${PYTHONVER} coveralls coverage pandas scandir
         - pip install --pre .
       script:
         - coverage run -m unittest discover tests
