--- a/.ci_support/environment.yml
+++ b/.ci_support/environment.yml
@@ -4,5 +4,5 @@ dependencies:
   - coveralls
   - coverage
   - codacy-coverage
-  - pandas >=1.2.1
-  - scandir >=1.10.0
+  - pandas =1.2.1
+  - scandir =1.10.0
