--- a/.github/workflows/UpdateDependabotPR.yml
+++ b/.github/workflows/UpdateDependabotPR.yml
@@ -2,7 +2,7 @@ name: UpdateDependabotPR
 
 on:
   pull_request_target:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git commit -m "[dependabot skip] Update environment" -a
       - name: UpdateDependabotPR push
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@main
         with:
           github_token: ${{ secrets.DEPENDABOT_WORKFLOW_TOKEN }}
           branch: ${{ github.event.pull_request.head.ref }}
