--- a/.ci_support/environment.yml
+++ b/.ci_support/environment.yml
@@ -1,8 +1,8 @@
 channels:
   - conda-forge
 dependencies:
-  - coveralls
+  #- coveralls
   - coverage
-  - codacy-coverage
+  #- codacy-coverage
   - pandas =1.5.1
   - scandir =1.10.0
