--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,7 +15,7 @@ jobs:
       CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.2.0
     - uses: conda-incubator/setup-miniconda@v2
       with:
         python-version: "3.10"
@@ -24,6 +24,7 @@ jobs:
         channel-priority: strict
         auto-update-conda: true  
         environment-file: .ci_support/environment.yml
+        miniforge-variant: Mambaforge
     - name: Setup
       shell: bash -l {0}
       run: |
