--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -16,12 +16,14 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.11']
+        python-version: ['3.12']
         include:
         - operating-system: ubuntu-latest
           python-version: '3.9'
         - operating-system: ubuntu-latest
           python-version: '3.10'
+        - operating-system: ubuntu-latest
+          python-version: '3.11'
 
     steps:
     - uses: actions/checkout@v2
