cleanup github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,15 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/pyfileindex
+      url: https://pypi.org/p/${{ github.event.repository.name }}
     permissions:
       id-token: write
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: "3.11"
-
     - name: Install dependencies
       run: >-
         python -m pip install --user --upgrade setuptools wheel
