--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -61,6 +61,7 @@ jobs:
       run: |
         pip install --no-deps .
         coverage run --omit pyfileindex/_version.py -m unittest discover tests
+        coverage combine
     - name: Coveralls
       if: matrix.label == 'linux-64-py-3-12'
       uses: coverallsapp/github-action@v2
