--- a/.github/workflows/unittests_old.yml
+++ b/.github/workflows/unittests_old.yml
@@ -11,10 +11,9 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: conda-incubator/setup-miniconda@v2.2.0
       with:
         python-version: '3.9'
@@ -24,10 +23,8 @@ jobs:
         auto-update-conda: true
         environment-file: .ci_support/environment-old.yml
         miniforge-variant: Mambaforge
-    - name: Setup
+    - name: Test
       shell: bash -l {0}
       run: |
         pip install --no-deps .
-    - name: Test
-      shell: bash -l {0}
-      run: python -m unittest discover tests
+        python -m unittest discover tests
