--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
+    "numpy==1.26.0",
     "pandas==2.1.3",
     "scandir==1.10.0",
 ]
