--- a/.github/workflows/pypicheck.yml
+++ b/.github/workflows/pypicheck.yml
@@ -14,12 +14,12 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2.2.0
       with:
         python-version: "3.10"
-        mamba-version: "*"
+        miniforge-variant: Mambaforge
         channels: conda-forge
         channel-priority: strict
-        auto-update-conda: true  
+        activate-environment: my-env
         environment-file: .ci_support/environment.yml
-        miniforge-variant: Mambaforge
+        use-mamba: true
     - name: Setup
       shell: bash -l {0}
       run: |
