--- a/.github/workflows/unittests_old.yml
+++ b/.github/workflows/unittests_old.yml
@@ -17,12 +17,12 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2.2.0
       with:
         python-version: '3.9'
-        mamba-version: "*"
+        miniforge-variant: Mambaforge
         channels: conda-forge
         channel-priority: strict
-        auto-update-conda: true
-        environment-file: .ci_support/environment-old.yml
-        miniforge-variant: Mambaforge
+        activate-environment: my-env
+        environment-file: ci_support/environment-old.yml
+        use-mamba: true
     - name: Test
       shell: bash -l {0}
       run: |
