--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         python-version: "3.11"
     - name: Install dependencies
-      run: python -m pip install --user --upgrade setuptools wheel
+      run: python -m pip install --user --upgrade numpy pandas scandir setuptools wheel
     - name: Convert dependencies
       run: |
         cp .ci_support/environment-old.yml environment.yml
