--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -59,7 +59,8 @@ jobs:
     - name: Test
       shell: bash -l {0}
       run: |
-        pip install --no-deps .
+        pip install versioneer[toml]==0.29
+        pip install . --no-deps --no-build-isolation
         coverage run --omit pyfileindex/_version.py -m unittest discover tests
         coverage combine
     - name: Coveralls
