--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,11 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "numpy==1.26.3",
-    "pandas==2.1.4",
+    "pandas==2.2.0",
     "scandir==1.10.0",
 ]
 dynamic = ["version"]
