--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,16 +15,20 @@ jobs:
       matrix:
         include:
         - operating-system: macos-latest
-          python-version: '3.12'
-          label: osx-64-py-3-12
+          python-version: '3.13'
+          label: osx-64-py-3-13
+
+        - operating-system: ubuntu-latest
+          python-version: '3.13'
+          label: linux-64-py-3-13
+
+        - operating-system: windows-latest
+          python-version: '3.13'
+          label: win-64-py-3-13
 
         - operating-system: ubuntu-latest
           python-version: '3.12'
           label: linux-64-py-3-12
-
-        - operating-system: windows-latest
-          python-version: '3.12'
-          label: win-64-py-3-12
 
         - operating-system: ubuntu-latest
           python-version: '3.11'
