--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,8 @@ repos:
         files: ^pyfileindex/
       - id: ruff-format
         name: ruff format
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v0.720'
+    hooks:
+    -   id: mypy
+        args: [--ignore-missing-imports]
