--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Install mypy
         run: pip install mypy
       - name: Test
-        run: mypy ${{ github.event.repository.name }}
+        run: mypy --ignore-missing-imports ${{ github.event.repository.name }}
