--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -104,7 +104,7 @@ jobs:
       uses: coverallsapp/github-action@v2
 
   unittest_old:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    needs: [black]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
