--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
         options: "--check --diff"
         src: ./${{ github.event.repository.name }}
 
-  black_fix:
+  black_fix:  # in most cases pre-commit is faster
     needs: [black]
     if: failure()
     runs-on: ubuntu-latest
