--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -128,6 +128,15 @@ jobs:
     - name: Coveralls
       if: matrix.label == 'linux-64-py-3-12'
       uses: coverallsapp/github-action@v2
+      with:
+        parallel: true
+        flag-name: "run-0"
+    - name: Coveralls Finish
+      if: matrix.label == 'linux-64-py-3-12'
+      uses: coverallsapp/github-action@v2
+      with:
+        parallel-finished: true
+        carryforward: "run-0"
 
   unittest_old:
     needs: [black]
