hardcode build number

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -131,12 +131,14 @@ jobs:
       with:
         parallel: true
         flag-name: "run-0"
+        build-number: ${{ github.run_id }}
     - name: Coveralls Finish
       if: matrix.label == 'linux-64-py-3-12'
       uses: coverallsapp/github-action@v2
       with:
         parallel-finished: true
         carryforward: "run-0"
+        build-number: ${{ github.run_id }}
 
   unittest_old:
     needs: [black]
