--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -77,6 +77,29 @@ jobs:
         pip install . --no-deps --no-build-isolation
         pip check
 
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Conda config
+      shell: bash -l {0}
+      run: echo -e "channels:\n  - conda-forge\n" > .condarc
+    - uses: conda-incubator/setup-miniconda@v3
+      with:
+        python-version: '3.13'
+        miniforge-version: latest
+        condarc-file: .condarc
+        environment-file: .ci_support/environment.yml
+    - name: Test
+      shell: bash -l {0}
+      run: |
+        pip install versioneer[toml]==0.29
+        pip install . --no-deps --no-build-isolation
+        coverage run --omit="pyfileindex/_version.py,tests/*" -m unittest discover tests
+        coverage xml
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
+
   unittest_matrix:
     needs: [black]
     runs-on: ${{ matrix.operating-system }}
@@ -125,18 +148,9 @@ jobs:
         pip install . --no-deps --no-build-isolation
         coverage run --omit="pyfileindex/_version.py,tests/*" -m unittest discover tests
         coverage xml
-    - name: Split build number
-      uses: xom9ikk/split@v1
-      id: split
-      with:
-        string: ${{ github.run_id }}
-        separator: .
-        limit: -1
     - name: Coveralls
       if: matrix.label == 'linux-64-py-3-12'
       uses: coverallsapp/github-action@v2
-      with:
-        build-number: ${{ steps.split.outputs._0 }}
 
   unittest_old:
     needs: [black]
