--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -99,6 +99,8 @@ jobs:
         coverage xml
     - name: Coveralls
       uses: coverallsapp/github-action@v2
+      with:
+        file: coverage.xml
 
   unittest_matrix:
     needs: [black]
@@ -146,11 +148,7 @@ jobs:
       run: |
         pip install versioneer[toml]==0.29
         pip install . --no-deps --no-build-isolation
-        coverage run --omit="pyfileindex/_version.py,tests/*" -m unittest discover tests
-        coverage xml
-    - name: Coveralls
-      if: matrix.label == 'linux-64-py-3-12'
-      uses: coverallsapp/github-action@v2
+        python -m unittest discover tests
 
   unittest_old:
     needs: [black]
