--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -97,6 +97,7 @@ jobs:
         pip install . --no-deps --no-build-isolation
         coverage run --omit="pyfileindex/_version.py,tests/*" -m unittest discover tests
         coverage xml
+        cat coverage.xml
     - name: Coveralls
       uses: coverallsapp/github-action@v2
       with:
