--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
 [build-system]
-requires = ["numpy", "pandas", "scandir", "setuptools", "versioneer[toml]==0.29"]
+requires = [
+    "numpy==2.2.4",
+    "pandas==2.2.3",
+    "scandir==1.10.0",
+    "setuptools==80.1.0",
+    "versioneer[toml]==0.29",
+]
 build-backend = "setuptools.build_meta"
 
 [project]
