--- a/.ci_support/environment-old.yml
+++ b/.ci_support/environment-old.yml
@@ -1,7 +1,8 @@
 channels:
   - conda-forge
 dependencies:
+  - hatchling =1.27.0
+  - hatch-vcs =0.4.0
   - numpy =1.23.5
   - pandas =1.5.3
   - scandir =1.10.0
-  - setuptools =75.1.0
