--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,6 @@ jobs:
         python .ci_support/release.py; cat pyproject.toml
     - name: Build
       shell: bash -l {0}
-      run: |
-        pip install versioneer[toml]==0.29
-        python setup.py sdist bdist_wheel
+      run: hatch build -t sdist -t wheel
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
