--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Setup
       shell: bash -l {0}
       run: |
-        pip install versioneer[toml]==0.29 tomlkit
+        pip install tomlkit
         python .ci_support/check.py
         cat pyproject.toml
         pip install . --no-deps --no-build-isolation
@@ -123,7 +123,6 @@ jobs:
     - name: Test
       shell: bash -l {0}
       run: |
-        pip install versioneer[toml]==0.29
         pip install . --no-deps --no-build-isolation
         coverage run --omit="pyfileindex/_version.py,tests/*" -m unittest discover tests
         coverage xml
@@ -149,7 +148,6 @@ jobs:
     - name: Test
       shell: bash -l {0}
       run: |
-        pip install versioneer[toml]==0.29
         pip install . --no-deps --no-build-isolation
         python -m unittest discover tests
 
