--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 .DS_Store
 .coverage
 nohup.out
-PyIron.log
-pyiron.log
 .idea/
 inspectionProfiles/
 _build/
 apidoc/
 .ipynb_checkpoints/
-test_times.dat
+pyfileindex/_version.py
