--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -124,7 +124,7 @@ jobs:
       shell: bash -l {0}
       run: |
         pip install . --no-deps --no-build-isolation
-        coverage run --omit="pyfileindex/_version.py,tests/*" -m unittest discover tests
+        coverage run --omit="pyfileindex/_version.py,pyfileindex/version.py,tests/*" -m unittest discover tests
         coverage xml
     - name: Upload coverage reports to Codecov
       if: matrix.label == 'linux-64-py-3-12'
