--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -89,13 +89,21 @@ jobs:
           python-version: '3.13'
           label: osx-64-py-3-13
 
-        - operating-system: ubuntu-latest
+        - operating-system: ubuntu-24.04-arm
           python-version: '3.13'
-          label: linux-64-py-3-13
+          label: linux-arm-24-py-3-13
+
+        - operating-system: ubuntu-22.04-arm
+          python-version: '3.13'
+          label: linux-arm-22-py-3-13
 
         - operating-system: windows-latest
           python-version: '3.13'
           label: win-64-py-3-13
+
+        - operating-system: ubuntu-latest
+          python-version: '3.13'
+          label: linux-64-py-3-13
 
         - operating-system: ubuntu-latest
           python-version: '3.12'
