--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,3 +83,7 @@ style = "pep440-pre"
 versionfile_source = "pyfileindex/_version.py"
 parentdir_prefix = "pyfileindex"
 tag_prefix = "pyfileindex-"
+
+[tool.coverage.run]
+omit = ["pyfileindex/_version.py","tests/*"]
+command_line = "-m unittest discover tests"
