--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,3 +92,7 @@ packages = [
 [tool.hatch.version]
 source = "vcs"
 path = "pyfileindex/_version.py"
+
+[tool.coverage.run]
+omit = ["pyfileindex/_version.py", "tests/*"]
+command_line = "-m unittest discover tests"
