--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,28 +72,13 @@ ignore = [
     "E501",
 ]
 
-[tool.hatch.build]
-include = [
-    "pyfileindex"
-]
-
 [tool.hatch.build.hooks.vcs]
-version-file = "pyfileindex/_version.py"
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "pyfileindex"
-]
-
-[tool.hatch.build.targets.wheel]
-packages = [
-    "pyfileindex"
-]
+version-file = "src/pyfileindex/_version.py"
 
 [tool.hatch.version]
 source = "vcs"
-path = "pyfileindex/_version.py"
+path = "src/pyfileindex/_version.py"
 
 [tool.coverage.run]
-omit = ["pyfileindex/_version.py", "tests/*"]
+source = ["pyfileindex"]
 command_line = "-m unittest discover tests"
