--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         cp .ci_support/environment-old.yml environment.yml
         python .ci_support/release.py; cat pyproject.toml
-        git update-index --assume-unchanged pyproject.toml pyfileindex/_version.py
+        git update-index --assume-unchanged pyproject.toml src/pyfileindex/_version.py
     - name: Build
       shell: bash -l {0}
       run: hatchling build -t sdist -t wheel
