--- a/.ci_support/environment.yml
+++ b/.ci_support/environment.yml
@@ -1,8 +1,9 @@
 channels:
-  - conda-forge
+- conda-forge
 dependencies:
-  - coverage
-  - hatchling =1.27.0
-  - hatch-vcs =0.5.0
-  - numpy =2.3.5
-  - pandas =2.3.3
+- coverage
+- hatchling =1.27.0
+- hatch-vcs =0.5.0
+- numpy =2.3.5
+- pandas =2.3.3
+- pytest =8.4.2
